; ModuleID = '/home/carl/AnghaBench/esp-idf/components/mdns/extr_mdns.c_mdns_query.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/mdns/extr_mdns.c_mdns_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32*, i32 }

@_mdns_server = common dso_local global i32 0, align 4
@ESP_ERR_INVALID_STATE = common dso_local global i32 0, align 4
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@ESP_ERR_NO_MEM = common dso_local global i32 0, align 4
@ACTION_SEARCH_ADD = common dso_local global i32 0, align 4
@portMAX_DELAY = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mdns_query(i8* %0, i8* %1, i8* %2, i32 %3, i32 %4, i64 %5, i32** %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  %15 = alloca i32**, align 8
  %16 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %9, align 8
  store i8* %1, i8** %10, align 8
  store i8* %2, i8** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i64 %5, i64* %14, align 8
  store i32** %6, i32*** %15, align 8
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %16, align 8
  %17 = load i32**, i32*** %15, align 8
  store i32* null, i32** %17, align 8
  %18 = load i32, i32* @_mdns_server, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %7
  %21 = load i32, i32* @ESP_ERR_INVALID_STATE, align 4
  store i32 %21, i32* %8, align 4
  br label %67

22:                                               ; preds = %7
  %23 = load i32, i32* %13, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %31

25:                                               ; preds = %22
  %26 = load i8*, i8** %10, align 8
  %27 = call i64 @_str_null_or_empty(i8* %26)
  %28 = load i8*, i8** %11, align 8
  %29 = call i64 @_str_null_or_empty(i8* %28)
  %30 = icmp ne i64 %27, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %25, %22
  %32 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  store i32 %32, i32* %8, align 4
  br label %67

33:                                               ; preds = %25
  %34 = load i8*, i8** %9, align 8
  %35 = load i8*, i8** %10, align 8
  %36 = load i8*, i8** %11, align 8
  %37 = load i32, i32* %12, align 4
  %38 = load i32, i32* %13, align 4
  %39 = load i64, i64* %14, align 8
  %40 = call %struct.TYPE_5__* @_mdns_search_init(i8* %34, i8* %35, i8* %36, i32 %37, i32 %38, i64 %39)
  store %struct.TYPE_5__* %40, %struct.TYPE_5__** %16, align 8
  %41 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %42 = icmp ne %struct.TYPE_5__* %41, null
  br i1 %42, label %45, label %43

43:                                               ; preds = %33
  %44 = load i32, i32* @ESP_ERR_NO_MEM, align 4
  store i32 %44, i32* %8, align 4
  br label %67

45:                                               ; preds = %33
  %46 = load i32, i32* @ACTION_SEARCH_ADD, align 4
  %47 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %48 = call i64 @_mdns_send_search_action(i32 %46, %struct.TYPE_5__* %47)
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %54

50:                                               ; preds = %45
  %51 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %52 = call i32 @_mdns_search_free(%struct.TYPE_5__* %51)
  %53 = load i32, i32* @ESP_ERR_NO_MEM, align 4
  store i32 %53, i32* %8, align 4
  br label %67

54:                                               ; preds = %45
  %55 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %56 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %55, i32 0, i32 1
  %57 = load i32, i32* %56, align 8
  %58 = load i32, i32* @portMAX_DELAY, align 4
  %59 = call i32 @xSemaphoreTake(i32 %57, i32 %58)
  %60 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %61 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %60, i32 0, i32 0
  %62 = load i32*, i32** %61, align 8
  %63 = load i32**, i32*** %15, align 8
  store i32* %62, i32** %63, align 8
  %64 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %65 = call i32 @_mdns_search_free(%struct.TYPE_5__* %64)
  %66 = load i32, i32* @ESP_OK, align 4
  store i32 %66, i32* %8, align 4
  br label %67

67:                                               ; preds = %54, %50, %43, %31, %20
  %68 = load i32, i32* %8, align 4
  ret i32 %68
}

declare dso_local i64 @_str_null_or_empty(i8*) #1

declare dso_local %struct.TYPE_5__* @_mdns_search_init(i8*, i8*, i8*, i32, i32, i64) #1

declare dso_local i64 @_mdns_send_search_action(i32, %struct.TYPE_5__*) #1

declare dso_local i32 @_mdns_search_free(%struct.TYPE_5__*) #1

declare dso_local i32 @xSemaphoreTake(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
